--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androiddevchallenge">
+    package="org.plavelo.countdown">
 
     <application
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidDevChallenge">
+        android:theme="@style/Theme.Countdown">
         <activity
-            android:name="com.example.androiddevchallenge.MainActivity"
+            android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AndroidDevChallenge.NoActionBar">
+            android:theme="@style/Theme.Countdown.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
