--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url "https://kotlin.bintray.com/kotlinx"
+        }
     }
 
     dependencies {
@@ -37,7 +40,10 @@ plugins {
 subprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url "https://kotlin.bintray.com/kotlinx"
+        }
     }
 
     apply plugin: 'com.diffplug.spotless'
